# anime-buddy-3d-compansion

./: .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSES.md  README.md  app.bundle.js  chat-client.js  eslint.config.mjs  index.html  package-lock.json  package.json  server.mjs  start-ai.bat  start-mika.bat
.agent-backups/: gemini-partial-work.patch  pre-memory-tts-performance-fix.patch  untracked-files.txt
animations/: CuriousTilt.vrma  Hello.vrma  Relax.vrma  Singing.vrma  Talking.vrma  Wave.vrma  kaiten10s.vrma  kaiten15s.vrma  kaiten5s.vrma
apps/api/: package.json  tsconfig.json
apps/tts/: README.md  benchmark_stream.py  pyproject.toml
apps/tts/app/: __init__.py  audio_cache.py  config.py  main.py  schemas.py
apps/tts/app/services/: vieneu_engine.py
apps/tts/tests/: test_health.py
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
docs/: CURRENT_STATUS.md  architecture-audit.md  aws-gpu-tts-deployment.md  browser-qa-report.md  dependency-report.md  implementation-report.md  local-development.md  memory-architecture.md  memory-qa-report.md  response-cache-qa-report.md  tts-audio-quality-report.md  tts-latency-report.md
scripts/: audio_quality_probe.py  check-env.mjs  fix-vrma-root-yaw.mjs  generate-companion-song.py  generate-companion-vrma.mjs  make-wave-vrma.mjs  smoke-test.mjs  verify-assets.mjs
src/: app.js
supabase/migrations/: 001_chat_schema.sql  002_persistent_memory.sql  003_memory_extraction_outbox.sql  004_response_audio_cache.sql
tests/browser/: benchmark-memory.mjs  benchmark-tts.mjs  collect-baseline.mjs  (+11 more)
(+94 files in other folders)
